// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should dispatch action to add repositories 1`] = `
Array [
  Object {
    "payload": Object {
      "newEndCursor": "Y3Vyc29yOnYyOpHOARWdng==",
      "newHasNextPage": true,
      "newList": Array [
        Object {
          "description": "Pang pang revenge",
          "homepageUrl": null,
          "name": "PangRevenge",
          "primaryLanguage": Object {
            "color": "#f1e05a",
            "name": "JavaScript",
          },
          "viewerHasStarred": true,
          "viewerSubscription": "UNSUBSCRIBED",
        },
        Object {
          "description": "Pangolier is balanced ",
          "homepageUrl": null,
          "name": "PangRevenge",
          "primaryLanguage": Object {
            "color": "#f1e05a",
            "name": "JavaScript",
          },
          "viewerHasStarred": false,
          "viewerSubscription": "SUBSCRIBED",
        },
        Object {
          "description": "Yeah, i love dota2 ",
          "homepageUrl": null,
          "name": "PangRevenge",
          "primaryLanguage": Object {
            "color": "#f1e05a",
            "name": "JavaScript",
          },
          "viewerHasStarred": true,
          "viewerSubscription": "SUBSCRIBED",
        },
      ],
    },
    "type": "UPDATE_REPOSITORIES",
  },
]
`;

exports[`should dispatch action to add repositories 2`] = `
Array [
  Object {
    "payload": Object {
      "newEndCursor": "Y3Vyc29yOnYyOpHOARWdng==",
      "newHasNextPage": false,
      "newList": Array [
        Object {
          "description": "We should play",
          "homepageUrl": null,
          "name": "PangRevenge",
          "primaryLanguage": Object {
            "color": "#f1e05a",
            "name": "JavaScript",
          },
          "viewerHasStarred": true,
          "viewerSubscription": "UNSUBSCRIBED",
        },
        Object {
          "description": "Hahaha",
          "homepageUrl": null,
          "name": "PangRevenge",
          "primaryLanguage": Object {
            "color": "#f1e05a",
            "name": "JavaScript",
          },
          "viewerHasStarred": false,
          "viewerSubscription": "UNSUBSCRIBED",
        },
      ],
    },
    "type": "ADD_REPOSITORIES",
  },
]
`;
